$Id: ChangeLog,v 1.157 2007/02/18 11:11:51 manuelbi Exp $

2007-04-15 Manuel Bilderbeek <manuel@msxnet.org>
	* Today we released 0.6.2-R1.

2007-02-18 Manuel Bilderbeek <manuel@msxnet.org>
	* Prepared for release 0.6.2-R1, hopefully the last release.
	  Several compatibility fixes have been done, mostly by Wouter.
	  Thanks!

2006-08-06 Joost Yervante Damad <joost@lumatec.be>
	* compile with --no-strict-aliasing to avoid possible problems in
	  wx2.6 library

2006-08-01 Joost Yervante Damad <joost@lumatec.be>
	* support for powerpc64

2006-07-30 Manuel Bilderbeek <manuel@msxnet.org>
	* Prepared for release of 0.6.1-R1.

2006-05-26 Manuel Bilderbeek <manuel@msxnet.org>
	* Use 'cart' i.s.o. 'carta' and 'cartb' to specify the cartridges.
	  openMSX now guarantees to place them in slot order, so if we use the
	  generic options, we don't have problems with slotexpanders anymore
	  (which can e.g. take up slot a) and still have the proper order.

2006-05-24 Manuel Bilderbeek <manuel@msxnet.org>
	* Added a hack that puts slotexpander always as first extension, so
	  that it can work with the post 0.6.0 release of openMSX. Let's hope
	  this is enough to keep it working.

2006-04-24 Manuel Bilderbeek <manuel@msxnet.org>
	* Fix compilation for GCC 4.1, thanks to Martin Michlmayr

2006-01-27 Manuel Bilderbeek <manuel@msxnet.org>
	* Small (yet hacky?) fix for the problem that no MSX Type is selected
	  at the very first startup... I hope this is my very last commit on
	  this version of Catapult. Let's go for Qt!
	* Set version to 0.6.0-R2, which includes this fix and a rebuild for
	  Windows, because the FontMap stuff of wxWidgets gives registry
	  problems for some Windows users. Note that this release is only
	  interesting for Windows users.

2006-01-21 Maarten ter Huurne <maarten@treewalker.org>
	* Released 0.6.0-R1.

2006-01-15 Maarten ter Huurne <maarten@treewalker.org>
	* Compile resources on MinGW32 as part of the build process.