@@ -1,4 +1,9 @@
-$Id: ChangeLog,v 1.157 2007/02/18 11:11:51 manuelbi Exp $
+$Id: ChangeLog,v 1.158 2007/04/15 14:44:32 manuelbi Exp $
+
+2007-05-09 Albert Beevendorp
+	* Added Keyboard Master
+	* Updated audio device _mode setting to the new audio device
+	  _balance setting and partial mute/unmute.
 
 2007-04-15 Manuel Bilderbeek <manuel@msxnet.org>
 	* Today we released 0.6.2-R1.
